# FMCWScatter

./: .gitignore  CMakeLists.txt  Todo  tmp_converter.py  viz.py
config/: simulator_config.json
fmcw/: Cargo.toml  build.rs
fmcw/config/: simulator_config.json
fmcw/cpp/include/: chirp_generator.hpp
fmcw/cpp/src/: chirp_generator.cc  range_finder.cc
fmcw/curt/: ray_trace_host.cu  ray_trace_kernel.cu  ray_trace_kernel.hpp
fmcw/curt/include/: cuda_utils.cuh  cuda_utils.hpp  ray_trace_host.cuh  ray_trace_host.hpp  ray_trace_kernel.cuh  ray_trace_kernel.hpp  rt_objects.cuh  rt_ray.cuh  sampler_kernel.cuh  scatter_kernel.cuh  world.cuh
fmcw/curt/src/: extern_func.cu  ray_trace_host.cu  ray_trace_kernel.cu  sampler_kernel.cu  scatter_kernel.cu
fmcw/src/: lib.rs
fmcw/src/others/: mod.rs  viz.rs
fmcw/src/ray_tracing/: gui.rs  mod.rs  model.rs  rt_helper.rs  viz.rs  world_objs.rs
fmcw/src/sim/: ctrl.rs  error_plot.rs  fmcw_helper.rs  gui.rs  map_io.rs  mod.rs  model.rs  plot.rs  structs.rs  viz.rs
fmcw/src/utils/: color.rs  ffi_helper.rs  map_io.rs  mod.rs  structs.rs  utils.rs  world_objs.rs
include/: chirp_generator.hpp
maps/: hfps0.lgp  hfps1.lgp  hfps2.lgp  hfps3.lgp  hfps4.lgp  hfps5.lgp  new_map.txt  reflect_only.json  reflect_only.txt  scatter_test.json  scatter_test.txt  standard6_obj.json  standard7_obj.json  test_cpp.txt
py_ws/: mfp_distribution.py
src/: chirp_generator.cc  range_finder.cc
unit_tests/: main.cc
